--- a/src/app.css
+++ b/src/app.css
@@ -19,7 +19,14 @@
 body {
 	min-height: 100vh;
 	margin: 0;
+	background-color: #b9c6d2;
 	background-color: var(--primary-color);
+	background: linear-gradient(
+		180deg,
+		#b9c6d2 0%,
+		#d0dde9 10.45%,
+		#edf0f8 41.35%
+	);
 	background: linear-gradient(
 		180deg,
 		var(--primary-color) 0%,
@@ -38,7 +45,7 @@ body::before {
 	z-index: -1;
 	background: radial-gradient(
 		50% 50% at 50% 50%,
-		var(--pure-white) 0%,
+		#ffffff 0%,
 		rgba(255, 255, 255, 0) 100%
 	);
 	opacity: 0.05;
@@ -54,6 +61,7 @@ h1,
 h2,
 p {
 	font-weight: 400;
+	color: rgba(0, 0, 0, 0.7);
 	color: var(--heading-color);
 }
 
@@ -62,6 +70,7 @@ p {
 }
 
 a {
+	color: #ff3e00;
 	color: var(--accent-color);
 	text-decoration: none;
 }
@@ -81,6 +90,7 @@ h2 {
 
 pre {
 	font-size: 16px;
+	font-family: 'Fira Mono', monospace;
 	font-family: var(--font-mono);
 	background-color: rgba(255, 255, 255, 0.45);
 	border-radius: 3px;
